...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/imgTvShowBackdrop"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@color/colorPrimary"
            android:contentDescription="@string/tvBackdrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toTopOf="@id/imgTvShowBackdrop"
            app:layout_constraintStart_toStartOf="@id/imgTvShowBackdrop">

            <ImageView
                android:id="@+id/imgTvShowPoster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/tvPoster"
                android:scaleType="centerCrop"
                tools:src="@drawable/ic_loading"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvTvShowTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            tools:text="@string/tvTitle"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@id/imgTvShowBackdrop"
            app:layout_constraintStart_toEndOf="@id/cardPoster"
            app:layout_constraintEnd_toEndOf="@id/tvTvShowOverview" />

        <TextView
            android:id="@+id/tvTvShowReleasedOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            android:text="@string/tvStartedOn"
            app:layout_constraintStart_toStartOf="@id/tvTvShowTitle"
            app:layout_constraintTop_toBottomOf="@id/tvTvShowTitle"/>

        <TextView
            android:id="@+id/tvTvShowReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/colorGrey"
...
                        android:textStyle="bold"
                        android:text="@string/tvRating"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tvTvShowRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:textColor="@color/colorTextIcons"
                    tools:text="@string/tvRating"/>

...
                        android:textStyle="bold"
                        android:text="@string/tvLanguage"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tvTvShowLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:textColor="@color/colorTextIcons"
                    tools:text="@string/tvLanguage"
                    app:layout_constraintTop_toBottomOf="@id/tvTvShowLanguageTitle"
...
            android:ellipsize="end"
            android:maxLines="4"
            app:layout_constraintTop_toBottomOf="@id/llLayoutMisc"
            app:layout_constraintStart_toStartOf="@id/cardPoster"/>

        <TextView
            android:id="@+id/tvTvShowReadMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginStart="12dp"
            tools:visibility="visible"
            android:visibility="gone"
...
