<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_movie"
        android:icon="@drawable/nav_movie_selector"
        android:title="@string/icMovie"/>

    <item
        android:id="@+id/nav_tv_show"
        android:icon="@drawable/nav_tvshow_selector"
        android:title="@string/icTvShow"/>

    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/nav_favorite_selector"
        android:title="@string/icFavorite"/>

</menu>